syntax = "proto3";

package myshop;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service ProductsOrchestratorService{
    rpc getProducts(google.protobuf.Empty) returns(ProductsResponse);
    rpc getProductDetails(ProductDetailRequest) returns (ProductDetails);
}

service ProductsDetailsService{
    rpc getProducts(google.protobuf.Empty) returns(ProductsResponse);
    rpc getProductDetail(ProductDetailRequest) returns (ProductDetail);
}


service StockService{
    rpc getStockInCount(ProductDetailRequest) returns (CountInStock);
}

service ReviewsService{
    rpc getProductReview(ProductDetailRequest) returns (Rating);
}

message ProductDetailRequest{
    uint32 id = 1;
}
message ProductsResponse{
    repeated ProductDetail products = 1;
}

message ProductDetails{
    ProductDetail ProductDetail = 1  ;
    Rating rating =2;
    CountInStock countInStock =3;
}


message ProductDetail{
    uint32 id = 1;
    string name = 2;
    string image = 3;
    string description = 4;
    string brand = 5;
    string category = 6;
    double pricePer100 = 7;
    double price = 8;   
   
}

message Rating {
    double rating = 1;
    google.protobuf.Int32Value numReviews = 2;
}

message CountInStock{
    uint32 countInStock = 1;
}
